// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HamburguerButton> should render HamburguerButton 1`] = `
<div>
  <button
    class="sc-FEMpB hsGFWb"
  >
    <svg
      class="sc-dVBluf dlzNfH"
      data-testid="hamburger-button-open"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 5H0V4h16v1zm0 8H0v-1h16v1zm0-4.008H0V8h16v.992z"
      />
    </svg>
  </button>
</div>
`;

exports[`<HamburguerButton> should show the HamburgerButton close 1`] = `
<div>
  <button
    class="sc-FEMpB hsGFWb"
  >
    <svg
      class="sc-dVBluf dlzNfH"
      data-testid="hamburger-button-open"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 5H0V4h16v1zm0 8H0v-1h16v1zm0-4.008H0V8h16v.992z"
      />
    </svg>
  </button>
</div>
`;

exports[`<HamburguerButton> should show the HamburgerButton open 1`] = `
<div>
  <button
    class="sc-FEMpB hsGFWb"
  >
    <svg
      class="sc-gjcoXW WxPWK"
      data-testid="hamburger-button-close"
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 16 16"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8 8.707l3.646 3.647.708-.707L8.707 8l3.647-3.646-.707-.708L8 7.293 4.354 3.646l-.707.708L7.293 8l-3.646 3.646.707.708L8 8.707z"
        fill-rule="evenodd"
      />
    </svg>
  </button>
</div>
`;
